--- a/Nest Game/style.css
+++ b/Nest Game/style.css
@@ -1,30 +1,88 @@
 body{
     margin: auto;
-}
+} /* navbar ตัวแถบค้นหา */
 .nav-bar{
     display: flex;
     margin:0;
-    height: 4.5rem;
+    height: 7.5rem;
     max-width:auto;
     align-items: center;
     background-color: #D9D9D9;
-    .icon img{
+    gap: 2rem;
+    .icon img {
+        padding-left: 4rem ;
         display: flex;
-        height: 6rem;
+        height: 10rem;
+    }
+    .nav-search{
+        display: flex;
+        position: relative;
+        padding-left: 2rem;
+        width: 29rem;
+    }
+    .lang {
+        text-align: center;
+        width: 4rem;
+        height: 3rem;
+        border: 1px solid #8E90B2;
+        border-radius: 1rem;
+        background-color: antiquewhite;
+    }
+    .lang p {
+    font-size: 1rem
+    
+    }
+    .nav-search input {
+        margin: 0;
+        width: 100%;
+        height: 3rem;
+        border:1px solid #ccc;
+        border-radius: 10px;
+        font-size: 2rem;
+    }
+    .nav-search button {
+        position: absolute;
+        right: 1rem;
+        height: 2rem;
+        width: 5rem;
+        margin: 0.5rem auto;
+        border: 1px solid #ccc;
+        border-radius: 1rem;
+    }
+    .icon-gop {
+        display: flex;
+        gap: 3rem;
+        font-size: 2.3rem;
     }
 }
-.nav-2{
+.nav-2 {
     display: flex;
-    margin: 0;
-    height: 4.5rem;
+    margin: 0 auto;
+    height: 5.4rem;
     max-width: auto;
     gap: 1rem;
-    padding-left:1rem ;
+    padding-left:4.8rem ;
     text-align: center;
     background-color: #8E90B2;
-    .nav-manu-info{
+    .nav-manu-info {
         display: flex;
-        margin-left: 10rem;
-        gap: 2rem   ;
+        margin-left: 12.8rem;
+        padding-right: 2rem;
+        gap: 2rem ;
+    }
+    .nav-manu-info p {
+        font-size: 23px;
+    }
+    .nav-manu {
+        display: flex;
+        margin: 1rem;
+        height: 1rem;
+        width: 5rem;
+        padding: 1rem;
+        align-items: center;
+        text-align: center;
+        border: 1px solid #be7d7d;
+        border-radius: 1rem;
+        background-color: antiquewhite;
     }
 }
