--- a/Nest Game/style.css
+++ b/Nest Game/style.css
@@ -1,9 +1,10 @@
 body{
-    margin: auto;
+    margin: 0 auto;
 } /* navbar ตัวแถบค้นหา */
 .nav-bar{
     display: flex;
-    margin:0;
+    justify-content: space-between;
+    margin:0 auto;
     height: 7.5rem;
     max-width:auto;
     align-items: center;
@@ -31,7 +32,6 @@ body{
     .lang p {
         margin-top: 9px;
         font-size: 25px;
-
     }
     .nav-search input {
         margin: 0;
@@ -58,6 +58,7 @@ body{
 }
 .nav-2 {
     display: flex;
+    justify-content: space-between;
     margin: 0 auto;
     height: 5.4rem;
     max-width: auto;
@@ -68,7 +69,6 @@ body{
     .nav-manu-info {
         display: flex;
         margin-left: 12.8rem;
-        padding-right: 2rem;
         gap: 2rem ;
     }
     .nav-manu-info p {
@@ -76,6 +76,7 @@ body{
     }
     .nav-manu {
         display: flex;
+        align-items: center;
         margin: 1rem;
         height: 1rem;
         width: 5rem;
