--- a/Nest Game/style.css
+++ b/Nest Game/style.css
@@ -90,6 +90,7 @@ body{
 }
 
 .list-product-sell {
+    margin: 1rem auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     text-align: center;
