--- a/Nest Game/style.css
+++ b/Nest Game/style.css
@@ -9,7 +9,8 @@ body{
     max-width:auto;
     align-items: center;
     background-color: #D9D9D9;
-    gap: 2rem;
+    gap: 3rem;
+    padding-right: 3rem;
     .icon img {
         padding-left: 4rem ;
         display: flex;
@@ -68,8 +69,9 @@ body{
     background-color: #8E90B2;
     .nav-manu-info {
         display: flex;
-        margin-left: 12.8rem;
+        justify-content: space-between;
         gap: 2rem ;
+        padding-right: 3rem;
     }
     .nav-manu-info p {
         font-size: 23px;
@@ -88,7 +90,7 @@ body{
         background-color: antiquewhite;
     }
 }
-
+/*หน้า ผู้เล่นเดี่ยว*/
 .list-product-sell {
     margin: 1rem auto;
     display: grid;
