--- a/Nest Game/style.css
+++ b/Nest Game/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Stack+Sans+Headline:wght@200..700&display=swap');
+
 body{
     margin: auto;
+    font-family: "Noto Sans Thai", sans-serif;
 } /* navbar ตัวแถบค้นหา */
 .nav-bar{
     display: flex;
@@ -88,8 +91,70 @@ body{
     }
 }
 
+.header-best-seller {
+    font-size: 4rem;
+    color: black;
+    padding-left: 2rem;
+}
+
 .list-product-sell {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     text-align: center;
+}
+
+.product-name {
+    font-size: 1.5rem;
+}
+
+
+.list-product-sell {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: 2rem;
+    margin-top: 4rem; 
+    padding: 1rem;
+}
+
+
+.container {
+    background: #f7f7f7;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    padding: 1.5rem;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.15); 
+    text-align: center;
+    width: 100%;
+    max-width: 300px;
+    margin: auto;
+}
+
+
+.container img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.buy-item {
+    margin-top: 1rem;
+    padding: 0.5rem;
+    background: #8E90B2;
+    color: white;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.buy-item:hover {
+    background: #6d6f93;
+}
+
+.price {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.4rem; 
+}
+
+.price p {
+    margin: 0;
 }
