--- a/Nest Game/style.css
+++ b/Nest Game/style.css
@@ -169,7 +169,7 @@ body {
 
 
 .container {
-    display: flex;
+    display: block;
     background: #f7f7f7;
     border: 1px solid #ccc;
     border-radius: 15px;
@@ -180,37 +180,8 @@ body {
     margin: 1rem 1rem;
 }
 
-
-.container img {
-    width: 100%;
-    height: 20rem;
-    border-radius: 10px;
-}
-
-.buy-item {
-    margin-top: 1rem;
-    padding: 0.5rem;
-    background: #8E90B2;
-    color: white;
-    border-radius: 8px;
-    cursor: pointer;
-}
-
-.buy-item:hover {
-    background: #6d6f93;
-}
-
-.price {
-    justify-content: center;
-    align-items: center;
-    gap: 0.4rem;
-}
-
-.price p {
-    margin: 0;
-}
-
 .container-1 {
+    position: relative;
     display: block;
     margin: 0rem 3rem;
     align-items: center;
@@ -222,7 +193,7 @@ body {
     align-items: center;
     text-align: center;
     margin: 0.5rem 0.5rem;
-    height: 38rem;
+    height: 37rem;
     width: 18rem;
     padding-top: 0rem;
     border-radius: 1rem;
@@ -236,10 +207,12 @@ body {
 
 .pen {
     margin: auto;
+    position: relative;
 }
 
 .pen img {
     width: 100%;
-    height: 25rem;
+    height: auto;
     border-radius: 1rem 1rem 0rem 0rem;
+    
 }
