--- a/Nest Game/style.css
+++ b/Nest Game/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Stack+Sans+Headline:wght@200..700&display=swap');
 
 body {
-    margin: auto;
     font-family: "Noto Sans Thai", sans-serif;
     margin: 0 auto;
     background-color: rgb(47, 47, 91);
@@ -14,10 +13,11 @@ body {
     margin: 0 auto;
     height: 7.5rem;
     max-width: auto;
+    text-align: center;
     align-items: center;
     background-color: #D9D9D9;
-    gap: 3rem;
-    padding-right: 3rem;
+    gap: 1rem;
+    padding-right: 5rem;
 
     .icon img {
         padding-left: 4rem;
