--- a/Nest Game/style.css
+++ b/Nest Game/style.css
@@ -352,5 +352,19 @@ body {
     height: 20rem;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+}
 
 
