--- a/Nest Game/style.css
+++ b/Nest Game/style.css
@@ -1,356 +1,399 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Stack+Sans+Headline:wght@200..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Stack+Sans+Headline:wght@200..700&display=swap");
 
 body {
-    font-family: "Noto Sans Thai", sans-serif;
-    margin: 0 auto;
-    background-color: rgb(47, 47, 91);
+  font-family: "Noto Sans Thai", sans-serif;
+  margin: 0 auto;
+  background-color: rgb(47, 47, 91);
 }
 
 /* navbar ตัวแถบค้นหา */
 .nav-bar {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  height: 7.5rem;
+  max-width: auto;
+  text-align: center;
+  align-items: center;
+  background-color: #d9d9d9;
+  gap: 1rem;
+  padding-right: 5rem;
+
+  .icon img {
+    padding-left: 4rem;
     display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    height: 7.5rem;
-    max-width: auto;
+    height: 10rem;
+  }
+
+  .nav-search {
+    display: flex;
+    position: relative;
+    padding-left: 2rem;
+    width: 40rem;
+  }
+
+  .lang {
     text-align: center;
-    align-items: center;
-    background-color: #D9D9D9;
-    gap: 1rem;
-    padding-right: 5rem;
+    width: 5rem;
+    height: 3rem;
+    border: 1px solid #8e90b2;
+    border-radius: 1rem;
+    background-color: antiquewhite;
+  }
 
-    .icon img {
-        padding-left: 4rem;
-        display: flex;
-        height: 10rem;
-    }
+  .lang p {
+    margin-top: 9px;
+    font-size: 25px;
+  }
 
-    .nav-search {
-        display: flex;
-        position: relative;
-        padding-left: 2rem;
-        width: 40rem;
-    }
+  .nav-search input {
+    margin: 0;
+    width: 100%;
+    height: 3rem;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-size: 2rem;
+  }
 
-    .lang {
-        text-align: center;
-        width: 5rem;
-        height: 3rem;
-        border: 1px solid #8E90B2;
-        border-radius: 1rem;
-        background-color: antiquewhite;
-    }
+  .nav-search button {
+    position: absolute;
+    right: 1rem;
+    height: 2rem;
+    width: 5rem;
+    margin: 0.5rem auto;
+    border: 1px solid #ccc;
+    border-radius: 1rem;
+  }
 
-    .lang p {
-        margin-top: 9px;
-        font-size: 25px;
-    }
-
-    .nav-search input {
-        margin: 0;
-        width: 100%;
-        height: 3rem;
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        font-size: 2rem;
-    }
-
-    .nav-search button {
-        position: absolute;
-        right: 1rem;
-        height: 2rem;
-        width: 5rem;
-        margin: 0.5rem auto;
-        border: 1px solid #ccc;
-        border-radius: 1rem;
-    }
-
-    .icon-gop {
-        display: flex;
-        gap: 3rem;
-        font-size: 2.3rem;
-    }
+  .icon-gop {
+    display: flex;
+    gap: 3rem;
+    font-size: 2.3rem;
+  }
 }
 
 .nav-2 {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  height: 5.4rem;
+  max-width: auto;
+  gap: 1rem;
+  padding-left: 4.8rem;
+  text-align: center;
+  background-color: #8e90b2;
+
+  .nav-manu-info {
     display: flex;
     justify-content: space-between;
-    margin: 0 auto;
-    height: 5.4rem;
-    max-width: auto;
-    gap: 1rem;
-    padding-left: 4.8rem;
+    gap: 2rem;
+    padding-right: 3rem;
+  }
+
+  .nav-manu-info p {
+    font-size: 23px;
+  }
+
+  .nav-manu {
+    display: flex;
+    align-items: center;
+    margin: 1rem;
+    height: 1rem;
+    width: 5rem;
+    padding: 1rem;
+    align-items: center;
     text-align: center;
-    background-color: #8E90B2;
-
-    .nav-manu-info {
-        display: flex;
-        justify-content: space-between;
-        gap: 2rem;
-        padding-right: 3rem;
-    }
-
-    .nav-manu-info p {
-        font-size: 23px;
-    }
-
-    .nav-manu {
-        display: flex;
-        align-items: center;
-        margin: 1rem;
-        height: 1rem;
-        width: 5rem;
-        padding: 1rem;
-        align-items: center;
-        text-align: center;
-        border: 1px solid #be7d7d;
-        border-radius: 1rem;
-        background-color: antiquewhite;
-    }
+    border: 1px solid #be7d7d;
+    border-radius: 1rem;
+    background-color: antiquewhite;
+  }
 }
 
 /* ================= FOOTER ================= */
 .footer {
-    background-color: #5b5b5b;
-    color: white;
-    padding: 2rem 3rem;
-    font-size: 1.7rem;
+  background-color: #5b5b5b;
+  color: white;
+  padding: 2rem 3rem;
+  font-size: 1.7rem;
 }
 
 .footer-container {
-    display: flex;
-    justify-content: space-between;
-    gap: 3rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 3rem;
 }
 
 .footer-left,
 .footer-right {
-    width: 50%;
+  width: 50%;
 }
 
 /* ===== LOGO + TEXT SIDE BY SIDE ===== */
 .footer-contract-section {
-    display: flex;
-    align-items: flex-start;
-    gap: 1.5rem;
-    padding-right: 1rem;
-    border-right: 1px solid #ccc;
-    margin-right: 2rem;
-    text-align: left;
+  display: flex;
+  align-items: flex-start;
+  gap: 1.5rem;
+  padding-right: 1rem;
+  border-right: 1px solid #ccc;
+  margin-right: 2rem;
+  text-align: left;
 }
 
 .footer-logo {
-    width: 250px;
-    height: auto;
-    margin: 0;
+  width: 250px;
+  height: auto;
+  margin: 0;
 }
 
 .footer-description {
-    margin-bottom: 15rem;
-    line-height: 1.6;
+  margin-bottom: 15rem;
+  line-height: 1.6;
 }
 
 /* Icons */
-.payment-icons, .contact-icons {
-    display: flex;
-    gap: 1rem;
-    margin: 1rem 0;
+.payment-icons,
+.contact-icons {
+  display: flex;
+  gap: 1rem;
+  margin: 1rem 0;
 }
 
 .payment-icon {
-    width: 40px;
-    height: 25px;
-    background-color: #5a5a5a;
-    border: 1px solid #999;
-    border-radius: 3px;
+  width: 40px;
+  height: 25px;
+  background-color: #5a5a5a;
+  border: 1px solid #999;
+  border-radius: 3px;
 }
 
 .circle {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    background-color: #D9D9D9;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: #d9d9d9;
 }
 
 .footer-copy {
-    text-align: center;
-    padding-top: 1.5rem;
-    border-top: 1px solid #ccc;
-    margin-top: 2rem;
+  text-align: center;
+  padding-top: 1.5rem;
+  border-top: 1px solid #ccc;
+  margin-top: 2rem;
 }
 .footer-contract-section {
-    text-align: left;
-    padding-right: 1rem;
-    border-right: 1px solid #ccc;
-    margin-right: 2rem;
-    height: 20rem;
+  text-align: left;
+  padding-right: 1rem;
+  border-right: 1px solid #ccc;
+  margin-right: 2rem;
+  height: 20rem;
 }
 
 .header-best-seller {
-    font-size: 4rem;
-    color: black;
-    padding-left: 2rem;
+  font-size: 4rem;
+  color: black;
+  padding-left: 2rem;
 }
 
 .contor {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  margin: 0 auto;
+  width: auto;
+  height: 40rem;
+
+  .show {
     display: flex;
+    margin: 1rem auto;
+    height: 35rem;
+    width: 63rem;
     text-align: center;
-    align-items: center;
+  }
+
+  .show img {
     margin: 0 auto;
-    width: auto;
-    height: 40rem;
+    text-align: center;
+    border-radius: 1rem;
+    height: 33rem;
+    width: 100%;
+  }
 
-    .show {
-        display: flex;
-        margin: 1rem auto;
-        height: 35rem;
-        width: 63rem;
-        text-align: center;
-
-    }
-
-    .show img {
-        margin: 0 auto;
-        text-align: center;
-        border-radius: 1rem;
-        height: 33rem;
-        width: 100%;
-    }
-
-    .show button {
-        margin: 15rem auto;
-        position: unset;
-        height: 5rem;
-        width: 5rem;
-    }
+  .show button {
+    margin: 15rem auto;
+    position: unset;
+    height: 5rem;
+    width: 5rem;
+  }
 }
 
 /*หน้า ผู้เล่นเดี่ยว*/
 
 .list-product-sell {
-    margin: 1rem auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    text-align: center;
+  margin: 1rem auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  text-align: center;
 }
 
 .product-name {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
-
 
 .list-product-sell {
-    display: inline-block;
-    text-align: center;
+  display: inline-block;
+  text-align: center;
 }
 
-
 .container {
-    display: block;
-    background: #f7f7f7;
-    border: 1px solid #ccc;
-    border-radius: 15px;
-    padding: 1.5rem;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-    text-align: center;
-    max-width: 20rem;
-    margin: 1rem 1rem;
+  display: block;
+  background: #f7f7f7;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  padding: 1.5rem;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  text-align: center;
+  max-width: 20rem;
+  margin: 1rem 1rem;
 }
 
 .container-1 {
-    position: relative;
-    display: block;
-    margin: 0rem 3rem;
-    align-items: center;
-    text-align: center;
+  position: relative;
+  display: block;
+  margin: 0rem 3rem;
+  align-items: center;
+  text-align: center;
 }
 
 .wap-in {
-    display: inline-block;
-    align-items: center;
-    text-align: center;
-    margin: 0.5rem 0.5rem;
-    height: 37rem;
-    width: 18rem;
-    padding-top: 0rem;
-    border-radius: 1rem;
-    background-color: rgb(230, 190, 190);
+  display: inline-block;
+  align-items: center;
+  text-align: center;
+  margin: 0.5rem 0.5rem;
+  height: 37rem;
+  width: 18rem;
+  padding-top: 0rem;
+  border-radius: 1rem;
+  background-color: rgb(230, 190, 190);
 }
 
 .wap-in h5 {
-    margin-top: 0 ;
-    font-size: 1.1rem;
+  margin-top: 0;
+  font-size: 1.1rem;
 }
 
 .pen {
-    margin: auto;
-    position: relative;
+  margin: auto;
+  position: relative;
 }
 
 .pen img {
-    width: 100%;
-    height: auto;
-    border-radius: 1rem 1rem 0rem 0rem;
-
+  width: 100%;
+  height: auto;
+  border-radius: 1rem 1rem 0rem 0rem;
 }
 
 /* ===== LOGO + TEXT SIDE BY SIDE ===== */
 .footer-contract-section {
-    display: flex;
-    align-items: flex-start;
-    gap: 1.5rem;
-    padding-right: 1rem;
-    border-right: 1px solid #ccc;
-    margin-right: 2rem;
-    text-align: left;
+  display: flex;
+  align-items: flex-start;
+  gap: 1.5rem;
+  padding-right: 1rem;
+  border-right: 1px solid #ccc;
+  margin-right: 2rem;
+  text-align: left;
 }
 
 .footer-logo {
-    width: 250px;
-    height: auto;
-    margin: 0;
+  width: 250px;
+  height: auto;
+  margin: 0;
 }
 
 .footer-description {
-    margin-bottom: 15rem;
-    line-height: 1.6;
+  margin-bottom: 15rem;
+  line-height: 1.6;
 }
 
 /* Icons */
-.payment-icons, .contact-icons {
-    display: flex;
-    gap: 1rem;
-    margin: 1rem 0;
+.payment-icons,
+.contact-icons {
+  display: flex;
+  gap: 1rem;
+  margin: 1rem 0;
 }
 
 .payment-icon {
-    width: 40px;
-    height: 25px;
-    background-color: #5a5a5a;
-    border: 1px solid #999;
-    border-radius: 3px;
+  width: 40px;
+  height: 25px;
+  background-color: #5a5a5a;
+  border: 1px solid #999;
+  border-radius: 3px;
 }
 
 .circle {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    background-color: #D9D9D9;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: #d9d9d9;
 }
 
 .footer-copy {
-    text-align: center;
-    padding-top: 1.5rem;
-    border-top: 1px solid #ccc;
-    margin-top: 2rem;
+  text-align: center;
+  padding-top: 1.5rem;
+  border-top: 1px solid #ccc;
+  margin-top: 2rem;
 }
 .footer-contract-section {
-    text-align: left;
-    padding-right: 1rem;
-    border-right: 1px solid #ccc;
-    margin-right: 2rem;
-    height: 20rem;
+  text-align: left;
+  padding-right: 1rem;
+  border-right: 1px solid #ccc;
+  margin-right: 2rem;
+  height: 20rem;
 }
 
+.login:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
 
+#loginPopup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
 
+#loginBox {
+  background: white;
+  padding: 20px;
+  width: 260px;
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  position: relative;
+  text-align: center;
+
+  opacity: 0;
+  transform: translateY(-15px);
+  transition: 0.2s ease;
+}
+
+#closeBtn {
+  position: absolute;
+  top: 10px;
+  right: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  font-weight: bold;
+  color: #444;
+  transition: 0.2s;
+}
+
+#closeBtn:hover {
+  color: red;
+  transform: scale(1.2);
+}
