--- a/Nest Game/style.css
+++ b/Nest Game/style.css
@@ -1,65 +1,66 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Stack+Sans+Headline:wght@200..700&display=swap");
 
-body{
-    margin: auto;
-    font-family: "Noto Sans Thai", sans-serif;
-    background-color: rgb(86, 72, 123);
+body {
+  margin: auto;
+  font-family: "Noto Sans Thai", sans-serif;
+  background-color: rgb(86, 72, 123);
 } /* navbar ตัวแถบค้นหา */
-.nav-bar{
-    display: flex;
-    justify-content: space-between;
-    margin:0 auto;
-    height: 7.5rem;
-    max-width:auto;
-    align-items: center;
-    background-color: #D9D9D9;
-    gap: 3rem;
-    padding-right: 3rem;
-    .icon img {
-        padding-left: 4rem ;
-        display: flex;
-        height: 10rem;
-    }
-    .nav-search{
-        display: flex;
-        position: relative;
-        padding-left: 2rem;
-        width: 29rem;
-    }
-    .lang {
-        text-align: center;
-        width: 5rem;
-        height: 3rem;
-        border: 1px solid #8E90B2;
-        border-radius: 1rem;
-        background-color: antiquewhite;
-    }
-    .lang p {
-        margin-top: 9px;
-        font-size: 25px;
-    }
-    .nav-search input {
-        margin: 0;
-        width: 100%;
-        height: 3rem;
-        border:1px solid #ccc;
-        border-radius: 10px;
-        font-size: 2rem;
-    }
-    .nav-search button {
-        position: absolute;
-        right: 1rem;
-        height: 2rem;
-        width: 5rem;
-        margin: 0.5rem auto;
-        border: 1px solid #ccc;
-        border-radius: 1rem;
-    }
-    .icon-gop {
-        display: flex;
-        gap: 3rem;
-        font-size: 2.3rem;
-    }
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  height: 7.5rem;
+  max-width: auto;
+  align-items: center;
+  background-color: #d9d9d9;
+  gap: 3rem;
+  padding-right: 3rem;
+}
+.nav-bar .icon img {
+  padding-left: 4rem;
+  display: block;
+  height: 10rem;
+}
+
+.nav-bar .nav-search {
+  display: flex;
+  position: relative;
+  padding-left: 2rem;
+  width: 29rem;
+}
+.nav-bar .lang {
+  text-align: center;
+  width: 5rem;
+  height: 3rem;
+  border: 1px solid #8e90b2;
+  border-radius: 1rem;
+  background-color: antiquewhite;
+}
+.nav-bar .lang p {
+  margin-top: 9px;
+  font-size: 25px;
+}
+.nav-bar .nav-search input {
+  margin: 0;
+  width: 100%;
+  height: 3rem;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-size: 2rem;
+}
+.nav-bar .nav-search button {
+  position: absolute;
+  right: 1rem;
+  height: 2rem;
+  width: 5rem;
+  margin: 0.5rem auto;
+  border: 1px solid #ccc;
+  border-radius: 1rem;
+}
+.nav-bar .icon-gop {
+  display: flex;
+  gap: 3rem;
+  font-size: 2.3rem;
 }
 
 .nav-2 {
@@ -72,33 +73,31 @@ body{
   padding-left: 4.8rem;
   text-align: center;
   background-color: #8e90b2;
-
-  .nav-manu-info {
-    display: flex;
-    justify-content: space-between;
-    gap: 2rem;
-    padding-right: 3rem;
-  }
-
-  .nav-manu-info p {
-    font-size: 23px;
-  }
-
-  .nav-manu {
-    display: flex;
-    align-items: center;
-    margin: 1rem;
-    height: 1rem;
-    width: 5rem;
-    padding: 1rem;
-    align-items: center;
-    text-align: center;
-    border: 1px solid #be7d7d;
-    border-radius: 1rem;
-    background-color: antiquewhite;
-  }
 }
 
+.nav-2 .nav-manu-info {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+  padding-right: 3rem;
+}
+
+.nav-2 .nav-manu-info p {
+  font-size: 23px;
+}
+
+.nav-2 .nav-manu {
+  display: flex;
+  align-items: center;
+  margin: 1rem;
+  height: 1rem;
+  width: 5rem;
+  padding: 1rem;
+  text-align: center;
+  border: 1px solid #be7d7d;
+  border-radius: 1rem;
+  background-color: antiquewhite;
+}
 /* ================= FOOTER ================= */
 .footer {
   background-color: #5b5b5b;
