--- a/Nest Game/agreement.css
+++ b/Nest Game/agreement.css
@@ -33,13 +33,13 @@ hr {
 }
 
 
-h2 header-text {
+/* h2 header-text {
     margin-top: 200px;
-}
+} */
 
-.h2, .h3 {
+/* .h2, .h3 {
     font-size: 1.5rem;
-}
+} */
 
 
 h4{
