--- a/Nest Game/style.css
+++ b/Nest Game/style.css
@@ -542,3 +542,13 @@ a {
   font-size: 16px;
   transition: background-color 0.3s;
 }
+
+.like:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.market:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
