--- a/Nest Game/agreement.css
+++ b/Nest Game/agreement.css
@@ -5,10 +5,8 @@ body {
     background-color: rgb(209, 209, 209);
 }
 
-
-
 /* class ของข้อความ */
-.XX{
+.XX {
     font-size: 21px;
 }
 
@@ -20,7 +18,7 @@ hr {
 }
 
 /* กล่องนโยบาย */
-.all{
+.all {
     width: 60%;
     background-color: white;
     border-radius: 0.5%;
@@ -32,7 +30,6 @@ hr {
     padding: 20px;
 }
 
-
 /* h2 header-text {
     margin-top: 200px;
 } */
@@ -41,22 +38,21 @@ hr {
     font-size: 1.5rem;
 } */
 
-
-h4{
+h4 {
     text-align: left;
     padding-left: 200px;
     padding-right: 200px;
 }
 
-.end{
-    text-align: center;    
+.end {
+    text-align: center;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-img{
+img {
     display: block;
     margin: auto;
 }
@@ -73,17 +69,19 @@ img{
     margin: auto;
     margin-top: 20px;
     text-align: center;
-    transition: background-color 0.3s ease, box-shadow 0.3s ease; 
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
 .end:hover {
-    background-color: #555555; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
-    cursor: pointer; /* เปลี่ยนเมาส์เป็นนิ้วไปชี้ */
+    background-color: #555555;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    /* เปลี่ยนเมาส์เป็นนิ้วไปชี้ */
 }
 
 .end:hover a {
-    color: rgb(0, 0, 0); /* เปลี่ยนสีตัวอักษรตอนเอาเมาส์วาง */
+    color: rgb(0, 0, 0);
+    /* เปลี่ยนสีตัวอักษรตอนเอาเมาส์วาง */
 }
 
 .end a {
@@ -91,9 +89,9 @@ img{
 }
 
 .footer-copy {
-  text-align: center;
-  padding-top: 1.2rem;
-  border-top: 1px solid;
-  margin-top: 1rem;
-  font-size: 1rem;
+    text-align: center;
+    padding-top: 1.2rem;
+    border-top: 1px solid;
+    margin-top: 1rem;
+    font-size: 1rem;
 }
