--- a/Nest Game/style.css
+++ b/Nest Game/style.css
@@ -121,9 +121,10 @@ nav li{
 
 /* ================= FOOTER ================= */
 .footer {
-  background-color: #888888;
+  background-color: transparent; /* ทำให้พื้นหลังโปร่งใส */
   color: white;
   padding: 2rem 3rem;
+  backdrop-filter: blur(5px);
 }
 
 .footer-container {
@@ -389,7 +390,7 @@ nav li{
 #loginBox {
   background: white;
   padding: 20px;
-  width: 260px;
+  width: 400px;
   border-radius: 10px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
   position: relative;
@@ -479,7 +480,7 @@ a {
 #signinBox {
   background: white;
   padding: 20px;
-  width: 260px;
+  width: 400px;
   border-radius: 10px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
   position: relative;
