--- a/Nest Game/style.css
+++ b/Nest Game/style.css
@@ -201,7 +201,7 @@ nav li{
 }
 
 .payment-icon {
-  width: 40px;
+  width: 60px;
   height: 25px;
   background-color: #5a5a5a;
   border: 1px solid #999;
@@ -220,7 +220,7 @@ nav li{
   margin: 0;
   color: rgb(255, 255, 255);
   display: flex;
-  justify-content: left;
+  justify-content: center;
 }
 
 .contor {
